Image editor shows color banding on rendered images (even with dither set to 2.0) #35074

Closed
opened 2013-04-25 10:13:46 +02:00 by Ben Thery · 5 comments

%%%--- Operating System, Graphics card ---

Seen on two systems:

  • Linux Mint 13 / nVidia Quadro FX 570 256MB

  • Linux Ubuntu 12.10 / AMD Radeon HD 4770 512MB

    • Blender version with error, and version that worked ---
  • Broken in 2.67 svn

  • Good in 2.66a

    • Short description of error ---

When rendering a scene, the resulting image displayed in the image editor shows color banding even when dithering is activated.
It is as if dithering is not taken into account anymore.
But it is not the case. Indeed, it is only a display error because the rendered image when saved to file (.png) doesn't show any color banding in an external image viewer.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

With both 2.66a and 2.67svn do:

  1. Use default scene
  2. In the "Render" panel, "Post-Processing" properties, set "Dither" to 2.0
  3. In the "World" panel, check the "Blend Sky" checkbox (keep default colors)
  4. Render
  5. In Blender 2.66a, rendered image background is clean/nice, no banding
  In Blender 2.67svn, in the image editor the rendered image shows heavy color banding in the background
 If you save the render, the saved image doesn't have the banding.

See attachements:

  • Inside Blender, with color banding
  • Saved rendered image, no banding

%%%

%%%--- Operating System, Graphics card --- Seen on two systems: - Linux Mint 13 / nVidia Quadro FX 570 256MB - Linux Ubuntu 12.10 / AMD Radeon HD 4770 512MB - Blender version with error, and version that worked --- - Broken in 2.67 svn - Good in 2.66a - Short description of error --- When rendering a scene, the resulting image displayed in the image editor shows color banding even when dithering is activated. It is as if dithering is not taken into account anymore. But it is not the case. Indeed, it is only a display error because the rendered image when saved to file (.png) doesn't show any color banding in an external image viewer. - Steps for others to reproduce the error (preferably based on attached .blend file) --- With both 2.66a and 2.67svn do: 1. Use default scene 2. In the "Render" panel, "Post-Processing" properties, set "Dither" to 2.0 3. In the "World" panel, check the "Blend Sky" checkbox (keep default colors) 4. Render 5. In Blender 2.66a, rendered image background is clean/nice, no banding ``` In Blender 2.67svn, in the image editor the rendered image shows heavy color banding in the background ``` ``` If you save the render, the saved image doesn't have the banding. ``` See attachements: - Inside Blender, with color banding - Saved rendered image, no banding %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can't redo this bug,
With opencolorio enabled or disabled at compile time, its dithering.

source/blender/imbuf/intern/divers.c, dither_value, try change..

di->v- [x] = v_in + (2 * di->v- [x] + di->e- [x]) * di->f;

to

di->v- [x] = v_in + (2 * di->v- [x] + di->e- [x]) * (di->f * 20.0f);

assigning to sergey.%%%

%%%I can't redo this bug, With opencolorio enabled or disabled at compile time, its dithering. source/blender/imbuf/intern/divers.c, dither_value, try change.. di->v- [x] = v_in + (2 * di->v- [x] + di->e- [x]) * di->f; to di->v- [x] = v_in + (2 * di->v- [x] + di->e- [x]) * (di->f * 20.0f); assigning to sergey.%%%

%%%Fixed dither issue in svn rev56291.

There'll be some banding when not using dither, but that's also how it was in 2.66a and not sure if it's even solvable -- more a limitation of 8bit display.

Anyway, thanks for the report and please let me know if you'll notice more issues.%%%

%%%Fixed dither issue in svn rev56291. There'll be some banding when not using dither, but that's also how it was in 2.66a and not sure if it's even solvable -- more a limitation of 8bit display. Anyway, thanks for the report and please let me know if you'll notice more issues.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%I confirm it is fixed for me: No color banding anymore with dithering (back to 2.66a behaviour).

Thank you Sergey.%%%

%%%I confirm it is fixed for me: No color banding anymore with dithering (back to 2.66a behaviour). Thank you Sergey.%%%
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#35074
No description provided.