Fix #35074: Image editor shows color banding on rendered images (even with dither set to 2.0)

Mistake in one of changes to GLSL display function,
missed fallback mode in case dither is non-zero,