source/blender/editors/screen/glutil.c
@@ -1043,15 +1043,15 @@ void glaDrawImBuf_glsl(ImBuf *ibuf, float x, float y, int zoomfilter,
 		return;
 
 	/* Dithering is not supported on GLSL yet */
-	// force_fallback = ibuf->dither != 0.0f;
+	force_fallback |= ibuf->dither != 0.0f;
 
 	/* Single channel images could not be transformed using GLSL yet */
-	// force_fallback = ibuf->channels == 1;
+	force_fallback |= ibuf->channels == 1;
 
 	/* If user decided not to use GLSL, fallback to glaDrawPixelsAuto */
-	force_fallback = !ELEM(U.image_draw_method,
-	                       IMAGE_DRAW_METHOD_AUTO,
-	                       IMAGE_DRAW_METHOD_GLSL);
+	force_fallback |= !ELEM(U.image_draw_method,
+	                        IMAGE_DRAW_METHOD_AUTO,
+	                        IMAGE_DRAW_METHOD_GLSL);
 
 	/* This is actually lots of crap, but currently not sure about
 	 * more clear way to bypass partial buffer update crappyness
